fix poista method, separate poistaViimeinen and poistaTietty

--- a/src/fxAllergiainfo/AllergiainfoGUIView.fxml
+++ b/src/fxAllergiainfo/AllergiainfoGUIView.fxml
@@ -138,7 +138,7 @@
                         <Insets right="15.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="deletefirstp" mnemonicParsing="false" onAction="#deleteFirstProduct" text="Poista ensimmäinen tuote">
+                  <Button fx:id="deletep" mnemonicParsing="false" onAction="#deleteProduct" text="Poista viimeinen tuote">
                      <font>
                         <Font size="16.0" />
                      </font>
