--- a/src/fxAllergiainfo/AllergiainfoGUIView.fxml
+++ b/src/fxAllergiainfo/AllergiainfoGUIView.fxml
@@ -66,7 +66,7 @@
             <Separator prefWidth="200.0" />
             <HBox alignment="CENTER_RIGHT" prefWidth="500.0">
                <children>
-                  <Button fx:id="addnewp" mnemonicParsing="false" onAction="#avaaLisaaTuote" text="Lisää uusi tuote">
+                  <Button fx:id="addnewp" mnemonicParsing="false" onAction="#lisaaTuote" text="Lisää uusi tuote">
                      <font>
                         <Font size="16.0" />
                      </font>
