--- a/src/fxAllergiainfo/AllergiainfoGUIView.fxml
+++ b/src/fxAllergiainfo/AllergiainfoGUIView.fxml
@@ -39,15 +39,7 @@
             </Text>
             <ScrollPane fx:id="panelTuotteet" hbarPolicy="NEVER" vbarPolicy="AS_NEEDED" minHeight="350.0" minWidth="350.0">
                <content>
-               	<VBox fx:id="tuotteetVBox" minWidth="350.0">
-               	 <Text text="Ei löydetty tuotteita!">
-               	   <font>
-               	    <Font size="16.0" />
-               	   </font>
-               	   <VBox.margin>
-                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               	   </VBox.margin>
-               	 </Text>
+               	<VBox fx:id="tuotteetVBox" minWidth="350.0">       	 
                	  <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                   </padding>
@@ -106,6 +98,9 @@
 	                        <Font size="16.0" />
 	                      </font>
 	                  </Button>
+	                  <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin>
                   </HBox>
                   <Accordion>
                     <panes>
@@ -118,6 +113,14 @@
                                  <content>
                                     <VBox>
                                        <children>
+                                          <Button fx:id="clearAllergiat" mnemonicParsing="false" onAction="#tyhjennaAllergiat" text="Tyhjennä allergiat" minWidth="100">
+							                  <font>
+						                        <Font size="16.0" />
+						                      </font>
+						                      <VBox.margin>
+						                        <Insets bottom="15.0" />
+						                     </VBox.margin>
+							              </Button>
                                           <CheckBox fx:id="cbGluteeni" onAction="#suodata" mnemonicParsing="false" text="Gluteeni" userData="0">
                                              <padding>
                                                 <Insets bottom="5.0" top="5.0" />
